меняет текст на главной странице

--- a/form.html
+++ b/form.html
@@ -17,15 +17,15 @@
         <legend>Общая информация</legend>
         <div>
           <label for="surname">Фамилия</label>
-          <input type="text" name="surname" placeholder="Иванов" />
+          <input type="text" name="surname" placeholder="Петров" />
         </div>
         <div>
           <label for="name">Имя</label>
-          <input type="text" name="name" placeholder="Иван" />
+          <input type="text" name="name" placeholder="Пётр" />
         </div>
         <div>
           <label for="middle_name">Отчество</label>
-          <input type="text" name="middle_name" placeholder="Иванович" />
+          <input type="text" name="middle_name" placeholder="Петрович" />
         </div>
         <div>
           <label for="mail">email</label>
